--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: gianasista blog
+title: Home
 email: mail@gianasista.de
 description: > # this means to ignore newlines until "baseurl:"
   This is my blog about all the technical stuff I do in my free time. It is meant as some kind of documentation for me.
